# MCPEval

./: .env.template  .gitignore  CODEOWNERS  CONTRIBUTING.md  DEVELOPMENT.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt  setup.sh  test_http_mcp.py
backend/: README.md  app.py  app_old.py  backend.production.yaml  backend.yaml  setup.sh  start_backend.sh
backend/config/: config_loader.py
backend/core/: __init__.py  job_manager.py  mcp_client.py
backend/routes/: analysis.py  auto.py  evaluation.py  files.py  health.py  jobs.py  llm_judge.py  mcp.py  report_generation.py  task_generation.py  task_utils.py  task_verification.py  tasks.py  workspace.py
backend/utils/: async_utils.py  file_utils.py  progress_parser.py
benchmarks/airbnb/: eval_script_gpt-5.sh  eval_script_mistral.sh  evaluate_all_models.sh  evaluation_prompt.json  llm_judge.sh
benchmarks/airbnb_think/: README.md  evaluate_all_models.sh  evaluation_prompt.json
benchmarks/filesystem/: README.md  data_generate.sh  data_verification.sh  evaluation.py  evaluation.sh  evaluation_analyze.sh  filesystem_eval_prompt.json  filesystem_test_tasks_verified.json  model_config.json  task_generation_prompt.json  task_verification.py  task_verification_prompt.json  utils.py
benchmarks/healthcare/: end2end.sh  eval_only.sh  eval_script_mistral.sh  eval_script_qwen_30b.sh  eval_script_qwen_32b.sh  eval_script_xlam2_70b.sh  evaluation.sh  evaluation_prompt.json  llm_judge.sh  readme.md  report_only.sh
benchmarks/national_parks/: analyze.sh  end2end.sh  evaluation.sh  evaluation_gpt-5.sh  evaluation_prompt.json  llm_judge.sh  task_generation_prompt.json
benchmarks/playwright/: end2end.sh  evaluation.sh  evaluation_prompt.json
benchmarks/sequential_thinking/: end2end.sh  evaluation.sh  evaluation_prompt.json  llm_judge.sh
benchmarks/special_calculator/: auto.sh  end2end.sh  (+1 more)
frontend/: .eslintrc.json  .gitignore  README.md  package-lock.json  package.json  setup.sh  tsconfig.json
scripts/: run_uv.sh
(+334 files in other folders)
